[package]
name = "imgmc"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.45", features = ["derive"] }
figment = { version = "0.10.19", features = ["toml"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
slug = "0.1.6"
ureq = { version = "3.0.12", features = ["json"] }
xdg = "3.0.0"
